--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.25",
+    "@antfu/eslint-config": "1.0.0-beta.25",
     "@iconify-json/carbon": "^1.1.21",
     "@intlify/unplugin-vue-i18n": "^1.4.0",
     "@types/markdown-it-link-attributes": "^3.0.2",
@@ -42,7 +42,7 @@
     "cross-env": "^7.0.3",
     "cypress": "^13.3.0",
     "cypress-vite": "^1.4.2",
-    "eslint": "^8.51.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-cypress": "^2.15.1",
     "https-localhost": "^4.7.1",
     "lint-staged": "^14.0.1",
@@ -64,7 +64,7 @@
     "vite-plugin-inspect": "^0.7.40",
     "vite-plugin-pages": "^0.31.0",
     "vite-plugin-pwa": "^0.16.5",
-    "vite-plugin-vue-devtools": "^1.0.0-rc.5",
+    "vite-plugin-vue-devtools": "1.0.0-rc.5",
     "vite-plugin-vue-layouts": "^0.8.0",
     "vite-plugin-webfont-dl": "^3.7.6",
     "vite-ssg": "^0.23.3",
